Use more efficient JDK 1.5 number factory methods